# HolisticTraceAnalysis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  requirements.txt  trace_load_benchmark.py
docs/: Makefile  README.md  conf.py  index.rst  requirements.txt
examples/: cupti_flops_analysis.ipynb  cupti_profiler_demo.py  customize_trace_parser.ipynb  execution_trace_demo.ipynb  identify_stragglers.ipynb  kernel_breakdown_demo.ipynb  memory_analysis_demo_2.ipynb  plot_timeline.ipynb  symbol_table_demo.py  timeline_demo.ipynb  trace_analysis_demo.ipynb  trace_diff_demo.ipynb  trace_filter_demo.ipynb
hta/: __init__.py  memory_analysis.py  trace_analysis.py  trace_diff.py  version.py
scripts/: convert_to_perfetto.py
tests/: test_call_stack.py  test_config.py  test_correlation.py  test_coverage_gaps.py  test_critical_path_analysis.py  test_cupti_profiler.py  test_custom_trace_parser.py  test_event_args_yaml_parser.py  test_execution_trace.py  test_hip_kernel_launch_stats.py  test_log_usage_call_identity.py  test_log_usage_decorators.py  test_memory_analysis.py  test_memory_utils.py  test_parser_config.py  test_symbol_table.py  test_test_utils.py  test_timeline.py  test_trace_analysis.py  test_trace_call_graph.py  test_trace_call_stack.py  test_trace_df.py  test_trace_diff.py  test_trace_file.py  (+4 more)
(+73 files in other folders)
